; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/pmcstat/extr_pmcpl_gprof.c_pmcstat_gmon_create_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/pmcstat/extr_pmcpl_gprof.c_pmcstat_gmon_create_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmcstat_image = type { i32 }

@PATH_MAX = common dso_local global i32 0, align 4
@EX_SOFTWARE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"ERROR: cannot find pmcid\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"%s/%s/%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pmcstat_gmon_create_name(i8* %0, %struct.pmcstat_image* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.pmcstat_image*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store %struct.pmcstat_image* %1, %struct.pmcstat_image** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @PATH_MAX, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %8, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %9, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i8* @pmcstat_pmcid_to_name(i32 %14)
  store i8* %15, i8** %7, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %3
  %19 = load i32, i32* @EX_SOFTWARE, align 4
  %20 = call i32 @err(i32 %19, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %18, %3
  %22 = trunc i64 %11 to i32
  %23 = load i8*, i8** %4, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = load %struct.pmcstat_image*, %struct.pmcstat_image** %5, align 8
  %26 = getelementptr inbounds %struct.pmcstat_image, %struct.pmcstat_image* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i8* @pmcstat_string_unintern(i32 %27)
  %29 = call i32 @snprintf(i8* %13, i32 %22, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %23, i8* %24, i8* %28)
  %30 = call i32 @pmcstat_string_intern(i8* %13)
  %31 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %31)
  ret i32 %30
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i8* @pmcstat_pmcid_to_name(i32) #2

declare dso_local i32 @err(i32, i8*) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i8*) #2

declare dso_local i8* @pmcstat_string_unintern(i32) #2

declare dso_local i32 @pmcstat_string_intern(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
